ast/src/snapshots/ast__parser__tests__loop_snapshots@inf_loop_continue.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"loop { continue; }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    InfiniteLoop(
                        InfiniteLoop {
                            block: Block {
                                statements: [
                                    Continue(
                                        Continue {
                                            location: Location(
                                                27..36,
                                            ),
                                        },
                                    ),
                                ],
                                location: Location(
                                    25..38,
                                ),
                            },
                            location: Location(
                                20..38,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..40,
                ),
            },
            location: Location(
                0..40,
            ),
        },
    ),
]
