ast/src/snapshots/ast__parser__tests__loop_snapshots@inf_loop_empty.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"loop { }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    InfiniteLoop(
                        InfiniteLoop {
                            block: Block {
                                statements: [],
                                location: Location(
                                    25..28,
                                ),
                            },
                            location: Location(
                                20..28,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..30,
                ),
            },
            location: Location(
                0..30,
            ),
        },
    ),
]
