ast/src/snapshots/ast__parser__tests__loop_snapshots@iter_loop_continue.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"for pattern in collection { continue }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    Expression(
                        IteratorLoop(
                            IteratorLoop {
                                pattern: Identifier {
                                    name: "pattern",
                                    location: Location(
                                        24..31,
                                    ),
                                },
                                collection: Variable(
                                    Variable {
                                        name: Identifier {
                                            name: "collection",
                                            location: Location(
                                                35..45,
                                            ),
                                        },
                                    },
                                ),
                                block: Block {
                                    statements: [
                                        Continue(
                                            Continue {
                                                location: Location(
                                                    48..56,
                                                ),
                                            },
                                        ),
                                    ],
                                    location: Location(
                                        46..58,
                                    ),
                                },
                                location: Location(
                                    20..58,
                                ),
                            },
                        ),
                    ),
                ],
                location: Location(
                    18..60,
                ),
            },
            location: Location(
                0..60,
            ),
        },
    ),
]
