ast/src/snapshots/ast__parser__tests__loop_snapshots@iter_loop_statement.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"for pattern in collection { let a = 0 }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    Expression(
                        IteratorLoop(
                            IteratorLoop {
                                pattern: Identifier {
                                    name: "pattern",
                                    location: Location(
                                        24..31,
                                    ),
                                },
                                collection: Variable(
                                    Variable {
                                        name: Identifier {
                                            name: "collection",
                                            location: Location(
                                                35..45,
                                            ),
                                        },
                                    },
                                ),
                                block: Block {
                                    statements: [
                                        VariableDeclaration(
                                            VariableDeclaration {
                                                name: Identifier {
                                                    name: "a",
                                                    location: Location(
                                                        52..53,
                                                    ),
                                                },
                                                variable_type: None,
                                                value: Literal(
                                                    Int(
                                                        IntLiteral {
                                                            value: 0,
                                                            location: Location(
                                                                56..57,
                                                            ),
                                                        },
                                                    ),
                                                ),
                                                is_const: false,
                                                location: Location(
                                                    48..57,
                                                ),
                                            },
                                        ),
                                    ],
                                    location: Location(
                                        46..59,
                                    ),
                                },
                                location: Location(
                                    20..59,
                                ),
                            },
                        ),
                    ),
                ],
                location: Location(
                    18..61,
                ),
            },
            location: Location(
                0..61,
            ),
        },
    ),
]
