ast/src/snapshots/ast__parser__tests__loop_snapshots@pred_loop_break.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"while true { break; }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    PredicateLoop(
                        PredicateLoop {
                            condition: Literal(
                                Boolean(
                                    BooleanLiteral {
                                        value: true,
                                        location: Location(
                                            26..30,
                                        ),
                                    },
                                ),
                            ),
                            block: Block {
                                statements: [
                                    Break(
                                        Break {
                                            location: Location(
                                                33..39,
                                            ),
                                        },
                                    ),
                                ],
                                location: Location(
                                    31..41,
                                ),
                            },
                            location: Location(
                                20..41,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..43,
                ),
            },
            location: Location(
                0..43,
            ),
        },
    ),
]
