ast/src/snapshots/ast__parser__tests__namespace_snapshots@path_1.snap
---
source: ast/src/parser.rs
assertion_line: 1539
expression: "parse(\"namespace std\")"
---
[
    Namespace(
        Namespace {
            path: IdentifierPath {
                path: [
                    Identifier {
                        name: "std",
                        location: Location(
                            10..13,
                        ),
                    },
                ],
                location: Location(
                    10..13,
                ),
            },
            location: Location(
                0..13,
            ),
        },
    ),
]
